@@ -1,18 +1,30 @@
 --- #YAML:1.0
-name:                Devel-NYTProf
-version:             3.00
-abstract:            Powerful feature-rich perl source code profiler
-license:             perl
-author:              
+name:               Devel-NYTProf
+version:            3.01
+abstract:           Powerful feature-rich perl source code profiler
+author:
     - Adam Kaplan <akaplan@cpan.org>, Tim Bunce <timb@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Getopt::Long:                  0
-    JSON::Any:                     0
-    List::Util:                    0
-    Test::More:                    0.84
-    XSLoader:                      0
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Getopt::Long:  0
+    JSON::Any:     0
+    List::Util:    0
+    Test::More:    0.84
+    XSLoader:      0
+resources:
+    bugtracker:   http://rt.cpan.org/Public/Dist/Display.html?Name=Devel-NYTProf
+    homepage:     http://perl-devel-nytprof.googlecode.com
+    license:      http://dev.perl.org/licenses/
+    MailingList:  http://groups.google.com/group/develnytprof-dev
+    repository:   http://perl-devel-nytprof.googlecode.com/svn
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
