@@ -9,15 +9,22 @@
 ###########################################################
 use warnings;
 use strict;
-use Devel::NYTProf::Data;
+
 use Getopt::Long;
+
+use Devel::NYTProf::Data;
+
 
 my %opt = (
     file => 'nytprof.out',
     out  => 'nytprof.callgrind',
 );
 
-process_cli();
+GetOptions( \%opt, qw/file|f=s out|o=s help|h/ )
+    or usage();
+
+usage() if $opt{help};
+
 
 print "Reading $opt{file} ...\n";
 
@@ -48,7 +55,7 @@ for my $sub (values %$subname_subinfo_map) {
 
     print $fh 'fl='.( $fi ? $fi->filename : "Unknown").$/;
     print $fh 'fn='.$sub->subname.$/;
-    print $fh join(' ',$sub->first_line, int($sub->excl_time * 1000000)).$/;
+    print $fh join(' ',$sub->first_line, int($sub->excl_time * 1_000_000)).$/;
     print $fh $/;
 
     my @callers;
@@ -90,37 +97,45 @@ for (keys %callmap) {
         # calls=(Call Count) (Destination position)
         # (Source position) (Inclusive cost of call)
         print $fh "calls=$count ".$sub->first_line.$/;
-        print $fh "$line ".int(1000000 * $incl_time).$/;
+        print $fh "$line ".int(1_000_000 * $incl_time).$/;
         print $fh $/;
     }
 }
 
-sub process_cli {
-    GetOptions( \%opt, qw/file|f=s out|o=s help|h/ )
-        or do {
-            usage();
-            exit 1;
-        };
-
-    if ( defined( $opt{help} ) ) {
-        usage();
-        exit;
-    }
-}
-
 sub usage {
-    print <<END
+    print <<END;
 usage: [perl] nytprofcg [opts]
- --file <file>, -f <file>  Use the specified file as Devel::NYTProf database
-                            file. [default: ./nytprof.out]
- --out <dir>,   -o <dir>   Place generated files here [default: ./nytprof]
- --delete,      -d         Delete the old output [uses --out]
+ --file <file>, -f <file>  Specify NYTProf data file [default: nytprof.out]
+ --out <file>,  -o <file>  Specify output file [default: nytprof.callgrind]
  --help,        -h         Print this message
 
 This script of part of the Devel::NYTProf distribution.
 Released under the same terms as Perl 5.8.0
 See http://search.cpan.org/dist/Devel-NYTProf/
 END
+    exit 1;
 }
 
 __END__
+
+=head1 NAME
+
+nytprofcg - Convert an NYTProf profile into Callgrind format
+
+=head1 SYNOPSIS
+
+ $ nytprofcg --file=nytprof.out --out=nytprof.callgrind
+
+ $ nytprofcg    # same as above
+
+=head1 DESCRIPTION
+
+Reads a profile data file generated by Devel::NYTProf and writes out the
+subroutine call graph information it contains in Callgrind format.
+
+The output Callgrind file can be loaded into the C<kcachegrind> GUI for
+interactive exploration. 
+
+For more information see L<http://kcachegrind.sourceforge.net/html/Home.html>
+
+=cut
