@@ -17,7 +17,7 @@ use Devel::NYTProf::Core;
 require Devel::NYTProf::FileHandle;
 use Devel::NYTProf::ReadStream qw(for_chunks);
 
-our $VERSION = '2.11';
+our $VERSION = '3.01';
     
 if ($VERSION != $Devel::NYTProf::Core::VERSION) {
     die "$0 version '$VERSION' doesn't match version '$Devel::NYTProf::Core::VERSION' of $INC{'Devel/NYTProf/Core.pm'}\n";
@@ -34,19 +34,6 @@ GetOptions(
     'verbose|v' => \my $opt_verbose,
 ) or usage();
 
-
-sub usage {
-    print <<END;
-usage: [perl] nytprofmerge [opts] nytprof-file [...]
- --out <file>,  -o <file>  Name of output file [default: $opt_out]
- --help,        -h         Print this message
- --verbose,     -v         Be more verbose
-
-This script of part of the Devel::NYTProf distribution.
-See http://search.cpan.org/dist/Devel-NYTProf/ for details and copyright.
-END
-    exit 1;
-}
 
 print "Writing $opt_out\n" if $opt_verbose;
 my $out = Devel::NYTProf::FileHandle::open($opt_out, "wb")
@@ -312,3 +299,42 @@ foreach my $fid_line (sort keys %callers) {
 
 print "Done.\n" if $opt_verbose;
 exit 0;
+
+sub usage {
+    print <<END;
+usage: [perl] nytprofmerge [opts] nytprof-file [...]
+ --out <file>,  -o <file>  Name of output file [default: $opt_out]
+ --help,        -h         Print this message
+ --verbose,     -v         Be more verbose
+
+This script of part of the Devel::NYTProf distribution.
+See http://search.cpan.org/dist/Devel-NYTProf/ for details and copyright.
+END
+    exit 1;
+}
+
+__END__
+
+=head1 NAME
+
+nytprofmerge - Reads multiple NYTProf profiles and outputs a merged one
+
+=head1 SYNOPSIS
+
+ $ nytprofmerge --out=nytprof-merged.out nytprof.out.*
+
+ $ nytprofmerge nytprof.out.*
+
+=head1 DESCRIPTION
+
+Reads multiple profile data files generated by Devel::NYTProf and writes out
+a new profile data file containing data merged from the original files.
+
+C<nytprofmerge> is likely to produce garbage if the input profiles
+aren't all profiles of exactly the same software.
+
+C<nytprofmerge> is new and somewhat experimental. If it produces unexpected
+results please produce a I<small> test case that demonstrates the problem and
+let us know at L<http://groups.google.com/group/develnytprof-dev> - thanks!
+
+=cut
