@@ -2,7 +2,7 @@
 
 Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 
-(As of $Date: 2009-12-24 14:40:14 +0000 (Thu, 24 Dec 2009) $ $Revision: 998 $)
+(As of $Date: 2009-12-28 22:29:41 +0000 (Mon, 28 Dec 2009) $ $Revision: 1004 $)
 
 =cut
 
@@ -12,6 +12,17 @@ subroutine profiler docs need update
 add u key to treemap to trigger moving 'up' a level
 add "calls N subs" to treemap mouseover box
 string eval merging - must allow at least viewing of source for called subs defined in a nested eval
+
+=head2 Changes in Devel::NYTProf 3.01 (svn r1005) 28th Dec 2009
+
+  Fixed (removed) use of vfscanf() which broke on Windows.
+  Fixed version number in nytprofmerge.
+
+  Added documentation to nytprofcg and nytprofmerge.
+
+  Updated NYTProf docs, including noting major contributors.
+  Updated docs to fix assorted typos, thanks to Jonathan Yu.
+  Updated nytprofcsv documentation.
 
 =head2 Changes in Devel::NYTProf 3.00 (svn r998) 24th Dec 2009
 
